[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muteval"
version = "0.0.1"
description = "Mutation testing for LLM eval suites. Find out whether your evals would actually catch a regression."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Enidus Dev" }]
keywords = [
    "llm",
    "evals",
    "evaluation",
    "mutation-testing",
    "testing",
    "prompt-engineering",
    "ai",
    "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AshwinUgale/muteval"
Repository = "https://github.com/AshwinUgale/muteval"
Issues = "https://github.com/AshwinUgale/muteval/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
examples = ["openai>=1.0"]

[project.scripts]
muteval = "muteval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/muteval"]
