[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muteval"
version = "0.3.1"
description = "Mutation testing for your LLM evals — find out if they'd actually catch a regression."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Enidus Dev" }]
keywords = [
    "llm",
    "evals",
    "evaluation",
    "mutation-testing",
    "testing",
    "prompt-engineering",
    "ai",
    "llmops",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/AshwinUgale/muteval"
Repository = "https://github.com/AshwinUgale/muteval"
Issues = "https://github.com/AshwinUgale/muteval/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0", "hypothesis>=6.0", "coverage>=7.0", "mypy>=1.8,<2.0"]
# Reference libraries used ONLY to cross-check muteval's dependency-free math in
# tests (tests/test_stats_reference.py). Never a runtime dependency.
verify = ["statsmodels>=0.14", "scipy>=1.10", "scikit-learn>=1.2", "krippendorff>=0.6", "pingouin>=0.5"]
examples = ["openai>=1.0"]
deepeval = ["deepeval>=1.0"]
ragas = ["ragas>=0.2"]
promptfoo = ["pyyaml>=6.0"]

[project.scripts]
muteval = "muteval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/muteval"]

[tool.mypy]
# Pragmatic gate today, not --strict. strict_optional is off because the config
# dataclass uses a validated-Optional pattern (fields are Optional at
# construction but guaranteed non-None after __post_init__), which mypy can't
# narrow. Tightening toward --strict is a tracked follow-up (ROADMAP §4.5).
python_version = "3.9"
strict_optional = false
warn_unused_ignores = true
files = ["src/muteval"]

[[tool.mypy.overrides]]
# Optional third-party integrations (behind extras) have no stubs installed.
module = ["ragas.*", "deepeval.*", "yaml", "certifi"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--ignore=mutants"
markers = [
    "slow: long-running statistical simulations (Monte-Carlo coverage); deselect with -m 'not slow'",
]

[tool.mutmut]
source_paths = ["src/muteval/stats.py"]
also_copy = ["src/muteval"]  # copy the whole package so the sandbox imports it
